# cyclonedx-gentoo-linux

./: .gitignore  Cargo.toml  README.md
src/: cyclonedx.rs  main.rs
testdata/: portage.json
