[package]
name = "cyclonedx-gentoo"
version = "0.4.0"
edition = "2024"
description = "Generates SBOM on stdout in CycloneDX format for Gentoo-Linux Portage Packet database"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Komplix/cyclonedx-gentoo-linux.git"
keywords = ["gentoo", "portage", "parser", "cyclonedx"]
categories = ["parsing", "os::linux-apis"]

[dependencies]
vardbpkg = "0.1"
eix = "0.4"
uuid = { version = "1.19.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
cyclonedx-bom = "0.8"

[dev-dependencies]
tempfile = "3.10"
